--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,9 @@ body {
   position: absolute;
   top: 0;
   height: 100%;
-  width: 50%;
+  width: 100%;
   color: white;
-  background: linear-gradient(to right, #000000, #f0f0f000);
+  background:#00000077;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -76,6 +76,16 @@ body {
   font-weight: 700;
   text-wrap: wrap;
 }
+
+/* .bannerButton {
+  transition: all 0.3s ease-in-out;
+
+}
+
+.bannerButton:hover {
+  letter-spacing: 2px;
+  background: ;
+} */
 
 
 
