--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body {
   height: 100%;
   width: 100%;
   color: white;
-  background:#00000077;
+  background:#36353500;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -40,10 +40,7 @@ body {
   text-wrap: wrap;
 }
 
-.imageText > h1 {
-  font-size: xx-large;
-  font: bolder;
-}
+
 
 .subItem {
   padding: 10px;
@@ -71,21 +68,21 @@ body {
 
 
 
+
+
 .textImage {
-  padding-top: 20px;
+  padding: 20px;
   font-weight: 700;
-  text-wrap: wrap;
+  font-size: 2.8rem;
+  color: #f3f3f3; 
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.7); 
+  text-align: center;
+  line-height: 1.2; 
+  background: linear-gradient(90deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)); 
 }
 
-/* .bannerButton {
-  transition: all 0.3s ease-in-out;
 
-}
 
-.bannerButton:hover {
-  letter-spacing: 2px;
-  background: ;
-} */
 
 
 
